@@ -130,6 +130,13 @@ if ($_POST) {
 		$input_errors[] = sprintf(gettext("Port %ld is already used by another service."), (!empty($_POST['webguiport']) ? $_POST['webguiport'] : 80));
 	}
 
+	// Check Webserver document root if auth is required
+	if (isset($config['websrv']['enable'])
+	    && isset($config['websrv']['authentication']['enable'])
+	    && !is_dir($config['websrv']['documentroot'])) {
+		$input_errors[] = gettext("Webserver document root is missing.");
+	}
+
 	if (!$input_errors) {
 		// Store old values for later processing.
 		$oldcert = $config['system']['webgui']['certificate'];
