@@ -59,6 +59,13 @@ if ($_POST) {
 		$input_errors[] = gettext("The confimed password does not match. Please ensure the passwords match exactly.");
 	}
 
+	// Check Webserver document root if auth is required
+	if (isset($config['websrv']['enable'])
+	    && isset($config['websrv']['authentication']['enable'])
+	    && !is_dir($config['websrv']['documentroot'])) {
+		$input_errors[] = gettext("Webserver document root is missing.");
+	}
+
 	if (!$input_errors) {
 		$config['system']['password'] = $_POST['password_new'];
 
